--- a/main.html
+++ b/main.html
@@ -6,8 +6,40 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
+
+
+
+
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" name="name" id="name" minlength="3" maxlength="18" placeholder="Name" required><br><br>
+		<label for="email">Email</label>
+		<input type="email" name="email" id="email" placeholder="Email" required><br><br>
+		<label for="gender">Gender</label>
+		<input type="radio" name="gender" id="gender_m" required>
+		<input type="radio" name="gender" id="gender_f" required><br><br>
+		<label for="cars">Car Brands</label>
+		<select name="cars" id="cars" placeholder="--Please choose an option--" required><br><br>
+		  <option value="volvo">Volvo</option>
+		  <option value="mahindra">Mahindra</option>
+		  <option value="mercedes">Mercedes</option>
+		  <option value="audi">Audi</option>
+		</select>
+		<label for="age">Age</label>
+		<input type="number" id="age" placeholder="Age" required><br><br>
+		<label for="dob">DOB</label>
+		<input type="date" name="dob" id="dob" required><br><br>
+		<label for="tel">Phone Number</label>
+		<input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx"><br><br>
+		<label for="password">Password</label>
+		<input type="password" name="password" id="password" placeholder="Password" required><br><br>
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox" name="tos" id="tos" required><br><br>
+		<button type="submit">Submit</button>
+	</form>
+    
     <script type="text/javascript" src="./script.js">
 </script>
 
